gccida/c1/copy_insn_notes
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2168:4: error: expected ';' after expression
rtx v8; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2168:5: error: use of undeclared identifier 'v8'
rtx v8; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2169:4: error: expected ';' after expression
rtx v9; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2169:5: error: use of undeclared identifier 'v9'
rtx v9; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2172:4: error: expected ';' after expression
rtx v12; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2172:5: error: use of undeclared identifier 'v12'; did you mean 'v10'?
rtx v12; // rsi 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2170:9: note: 'v10' declared here
__int64 v10; // r15 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2175:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2175:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2176:4: error: expected ';' after expression
rtx v16; // [rsp+0h] [rbp-38h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2176:5: error: use of undeclared identifier 'v16'
rtx v16; // [rsp+0h] [rbp-38h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2178:1: error: use of undeclared identifier 'v16'
v16 = v3; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2188:1: error: use of undeclared identifier 'v8'
v8 = map->insn_map[rtx->fld[0].rtint]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2189:6: error: use of undeclared identifier 'v8'
if ( v8 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2198:6: error: use of undeclared identifier 'v16'
|| ( v16 = copy_rtx_and_substitute( rtx[3].fld[0].rtx, map, 0), 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2199:19: error: use of undeclared identifier 'v16'
subst_constants( &v16, 0LL, map, 0), 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2201:1: error: use of undeclared identifier 'v9'
v9 = v16, 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2201:6: error: use of undeclared identifier 'v16'
v9 = v16, 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2202:33: error: use of undeclared identifier 'v16'
v8[3].fld[0].rtwint = ( __int64)v16, 
                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/integrate.c:2202:1: error: use of undeclared identifier 'v8'
v8[3].fld[0].rtwint = ( __int64)v16, 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_notes/src/obj/integrate.o] Error 1
